--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -1,4 +1,4 @@
-.wrapper {
+.wrapper-signup {
     width: 450px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -6,15 +6,21 @@
     box-shadow: 0 0 10px rgba(255, 255, 255, .5);
     color: #FFF;
     border-radius: 10px;
-    padding: 35x 40px;
+    padding: 35px 40px;
 }
 
-.wrapper h1 {
+.wrapper-signup h1 {
     font-size: 36px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.wrapper-signup h3 {
+    font-size: 14px;
     text-align: center;
 }
 
-.wrapper .input-box {
+.wrapper-signup .input-box {
     position: relative;
     width: 100%;
     height: 50px;
@@ -44,13 +50,11 @@
     transition: background 0.3s ease-in-out;
 }
 
-.wrapper .register-button{
+.wrapper-signup .register-button{
     position: relative;
     width: 100%;
     height: 50px;
-    text-align: center;
-    
-    
+    text-align: center; 
 }
 
 .register-button button {
@@ -59,7 +63,7 @@
     margin-top: 10px;
     background-color: #FFF;
     border: none;
-    border-radius: 40px;
+    border-radius: 50px;
     box-shadow:  0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
@@ -67,7 +71,7 @@
     font-weight: 700;
 }
 
-.wrapper .login-link {
+.wrapper-signup .login-link {
     font-size: 14.5px;
     text-align: center;
     margin-top: 20px;
